--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@500;700&display=swap');
 .App {
-  text-align: center;
+  min-height: 100vh;
+  margin-left: 3vw;
+  margin-right: 3vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -24,9 +24,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
