--- a/client/src/components/Detail/Detail.css
+++ b/client/src/components/Detail/Detail.css
@@ -21,16 +21,17 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
   }
+  .detail-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 90vw;
+  }
   
   .detail-content {
     background-color: #680148;
-    padding-top: 5px;
-    padding-left: 5px;
-    padding-right: 50px;
-    padding-bottom: 5px;
-
     border-radius: 5px;
-
     text-align: center;
     z-index: 1;
   }
@@ -46,8 +47,10 @@
   .tarjeta{
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
-    column-gap: 5vw;
+    flex-direction: column;
+    column-gap: 1vw;
+    align-items: center;
+    margin-top: 1vw;
   }
 
   .description{
@@ -55,7 +58,7 @@
     flex-direction: column;
     color: antiquewhite;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .name{
