--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,8 +1,18 @@
-.cards{
+.home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title{
+    font-family: 'Noto Serif', serif;
+    font-size: 38px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.home-content{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 2vw;
-    column-gap: 1vw;
-    margin-top: 3vw;
+    margin-top: 3vw; 
 }
