--- a/client/src/components/Detail/Detail.css
+++ b/client/src/components/Detail/Detail.css
@@ -1,66 +1,50 @@
-
-
-
 .detail-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .detail-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  .detail-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 90vw;
-  }
-  
-  .detail-content {
-    background-color: #680148;
-    border-radius: 5px;
-    text-align: center;
-    z-index: 1;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2vw;
+}
 
-  .detailImage{
-    width: 25vw;
-    border-radius: 5px;
-    border-color: black;
-    border: 2px;
-    border-style: solid;
-  }
+.detail-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 90vw;
+}
 
-  .tarjeta{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    column-gap: 1vw;
-    align-items: center;
-    margin-top: 1vw;
-  }
+.detail-content {
+  background-color: #680148;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 1;
+}
 
-  .description{
-    display: flex;
-    flex-direction: column;
-    color: antiquewhite;
-    justify-content: space-around;
-    align-items: center;
-  }
+.detailImage {
+  width: 25vw;
+  border-radius: 5px;
+  border-color: black;
+  border: 2px;
+  border-style: solid;
+}
 
-  .name{
-    font-size: 36px;
-  }
+.tarjeta {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  column-gap: 1vw;
+  align-items: center;
+  margin-top: 1vw;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  color: antiquewhite;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.name {
+  font-size: 36px;
+}
