--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,18 +1,50 @@
-.home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2vw;
 }
 
-.title{
-    font-family: 'Noto Serif', serif;
-    font-size: 38px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+.title {
+  font-family: "Noto Serif", serif;
+  font-size: 38px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-.home-content{
-    display: flex;
-    flex-direction: row;
-    margin-top: 3vw; 
+.home-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.home-conten-left {
+  display: flex;
+  flex-direction: cokumn;
+}
+
+.searchTerm {
+  font-family: "Noto Serif", serif;
+  font-size: 26px;
+}
+
+.paginado {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.paginado button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #680148;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 5px;
+  color: whitesmoke;
+}
+
+.paginado button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
