--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2vw;
+  margin-bottom: 2vw;
 }
 
 .title {
@@ -48,3 +49,15 @@
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.pagina-actual{
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #680148;
+  border: none;
+  border-radius: 4px;
+  margin: 0 5px;
+  color: whitesmoke;
+}
+
+
